added_resolving